--- a/stac2/config/workloads/sys_basic.yml
+++ b/stac2/config/workloads/sys_basic.yml
@@ -1,3 +1,4 @@
+# Copyright (c) 2009-2013 VMware, Inc.
 workloads:
   sys_basic_with_http:
     display: generic developer workload with a little http
