--- a/stac2/config/workloads/sys_http.yml
+++ b/stac2/config/workloads/sys_http.yml
@@ -1,3 +1,4 @@
+# Copyright (c) 2009-2013 VMware, Inc.
 workloads:
   sys_http:
     display: relatively heacy http load against a newly created app
