add service deletion

--- a/stac2/config/workloads/app_loop.yml
+++ b/stac2/config/workloads/app_loop.yml
@@ -111,6 +111,8 @@ workloads:
         actions:
           - action: delete_app
             appname: 0
+          - action: delete_service
+            servicename: 0
 
   app_loop_spring:
     display: create and update a spring app
