--- a/nabv/Gemfile
+++ b/nabv/Gemfile
@@ -1,14 +1,18 @@
 source "http://rubygems.org"
+
+ruby "1.9.3"
+
 gem 'bundler'
 gem 'sinatra'
 gem 'thin'
 gem 'json_pure'
 gem 'haml'
 gem 'redis'
-gem 'vmc'
-gem 'cfoundry'
+gem 'vmc', "~> 0.5.0.rc1"
+gem 'cfoundry', "~> 0.5.1.rc4"
 gem 'logger'
 gem 'uuidtools'
 gem 'httpclient'
 gem 'mongo'
 gem 'awesome_print'
+gem 'cf-autoconfig'
