--- a/stac2/config/workloads/db_rails.yml
+++ b/stac2/config/workloads/db_rails.yml
@@ -26,7 +26,7 @@ workloads:
             suspended: true
           - action: create_service
             service: mysql
-            plan: P200
+            plan: 200
             servicename: 0
           - action: user_services
           - action: pause
