--- a/stac2/config/workloads/app_loop.yml
+++ b/stac2/config/workloads/app_loop.yml
@@ -9,7 +9,7 @@ workloads:
       - please-compute
 
     operations:
-      # login, get situated, run vmc apps and services
+      # login, get situated, run cf apps and services
       - op: sequence
         actions:
           - action: login
@@ -57,7 +57,7 @@ workloads:
       - please-compute
 
     operations:
-      # login, get situated, run vmc apps and services
+      # login, get situated, run cf apps and services
       - op: sequence
         actions:
           - action: login
@@ -103,7 +103,7 @@ workloads:
       - please-compute
 
     operations:
-      # login, get situated, run vmc apps and services
+      # login, get situated, run cf apps and services
       - op: sequence
         actions:
           - action: login
@@ -136,7 +136,7 @@ workloads:
       - please-compute
 
     operations:
-      # login, get situated, run vmc apps and services
+      # login, get situated, run cf apps and services
       - op: sequence
         actions:
           - action: login
